--- a/src/main/resources/com/example/courseprifs/user-form.fxml
+++ b/src/main/resources/com/example/courseprifs/user-form.fxml
@@ -3,18 +3,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="367.0" prefWidth="634.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.UserForm">
    <children>
-      <TextField fx:id="usernameField" layoutX="41.0" layoutY="49.0" promptText="Username" />
+      <TextField fx:id="usernameField" layoutX="41.0" layoutY="59.0" promptText="Username" />
       <Button layoutX="297.0" layoutY="314.0" mnemonicParsing="false" onAction="#createUser" text="Save" />
-      <PasswordField fx:id="pswField" layoutX="41.0" layoutY="97.0" promptText="Password" />
-      <TextField fx:id="nameField" layoutX="41.0" layoutY="143.0" promptText="Name" />
-      <TextField fx:id="surnameField" layoutX="41.0" layoutY="191.0" promptText="Surname" />
-      <TextField fx:id="phoneNumField" layoutX="41.0" layoutY="242.0" promptText="Phone number" />
-      <ListView fx:id="userListField" layoutX="354.0" layoutY="22.0" prefHeight="237.0" prefWidth="263.0" />
+      <PasswordField fx:id="pswField" layoutX="41.0" layoutY="95.0" promptText="Password" />
+      <TextField fx:id="nameField" layoutX="41.0" layoutY="129.0" promptText="Name" />
+      <TextField fx:id="surnameField" layoutX="41.0" layoutY="165.0" promptText="Surname" />
+      <TextField fx:id="phoneNumField" layoutX="41.0" layoutY="202.0" promptText="Phone number" />
+      <ListView fx:id="userListField" layoutX="441.0" layoutY="65.0" prefHeight="237.0" prefWidth="176.0" />
+      <RadioButton fx:id="userRadio" layoutX="41.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" selected="true" text="User">
+         <toggleGroup>
+            <ToggleGroup fx:id="userType" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="restaurantRadio" layoutX="124.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Restaurant" toggleGroup="$userType" />
+      <RadioButton fx:id="clientRadio" layoutX="231.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Client" toggleGroup="$userType" />
+      <RadioButton fx:id="driverRadio" layoutX="312.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Driver" toggleGroup="$userType" />
+      <TextField layoutX="41.0" layoutY="258.0" promptText="License" />
+      <TextField layoutX="41.0" layoutY="290.0" promptText="Birthday Date" />
+      <TextField layoutX="41.0" layoutY="327.0" promptText="Vehicle Type" />
+      <TextField fx:id="addressField" layoutX="223.0" layoutY="59.0" promptText="Address" />
    </children>
 </AnchorPane>
