--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.courseprifs.fxControllers.MainForm"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="441.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.MainForm">
+   <children>
+      <TabPane prefHeight="441.0" prefWidth="699.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="User management">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="699.0">
+                     <children>
+                        <TableView layoutX="7.0" layoutY="7.0" prefHeight="341.0" prefWidth="684.0">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Id" />
+                            <TableColumn prefWidth="75.0" text="Login" />
+                              <TableColumn prefWidth="75.0" text="Password" />
+                              <TableColumn prefWidth="75.0" text="Name" />
+                              <TableColumn prefWidth="75.0" text="Surname" />
+                              <TableColumn prefWidth="75.0" text="Action" />
+                              <TableColumn prefWidth="75.0" text="Order history" />
+                          </columns>
+                        </TableView>
+                        <Button layoutX="299.0" layoutY="365.0" mnemonicParsing="false" text="Create new user" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Restaurant orders">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0">
+                     <children>
+                        <ListView layoutX="5.0" layoutY="14.0" prefHeight="393.0" prefWidth="228.0" />
+                        <ComboBox layoutX="252.0" layoutY="14.0" prefWidth="150.0" />
+                        <ComboBox layoutX="252.0" layoutY="59.0" prefWidth="150.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="Menu">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ListView layoutX="8.0" layoutY="29.0" prefHeight="376.0" prefWidth="222.0" />
+                        <Label layoutX="8.0" layoutY="6.0" text="My menu:" />
+                        <ComboBox layoutX="257.0" layoutY="29.0" prefWidth="150.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </children>
 </AnchorPane>
