--- a/src/main/resources/com/example/courseprifs/user-form.fxml
+++ b/src/main/resources/com/example/courseprifs/user-form.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -10,13 +11,7 @@
 
 <AnchorPane prefHeight="367.0" prefWidth="634.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.UserForm">
    <children>
-      <TextField fx:id="usernameField" layoutX="41.0" layoutY="59.0" promptText="Username" />
-      <Button layoutX="297.0" layoutY="314.0" mnemonicParsing="false" onAction="#createUser" text="Save" />
-      <PasswordField fx:id="pswField" layoutX="41.0" layoutY="95.0" promptText="Password" />
-      <TextField fx:id="nameField" layoutX="41.0" layoutY="129.0" promptText="Name" />
-      <TextField fx:id="surnameField" layoutX="41.0" layoutY="165.0" promptText="Surname" />
-      <TextField fx:id="phoneNumField" layoutX="41.0" layoutY="202.0" promptText="Phone number" />
-      <ListView fx:id="userListField" layoutX="441.0" layoutY="65.0" prefHeight="237.0" prefWidth="176.0" />
+      <Button layoutX="297.0" layoutY="314.0" mnemonicParsing="false" onAction="#createNewUser" text="Save" />
       <RadioButton fx:id="userRadio" layoutX="41.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" selected="true" text="User">
          <toggleGroup>
             <ToggleGroup fx:id="userType" />
@@ -25,9 +20,33 @@
       <RadioButton fx:id="restaurantRadio" layoutX="124.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Restaurant" toggleGroup="$userType" />
       <RadioButton fx:id="clientRadio" layoutX="231.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Client" toggleGroup="$userType" />
       <RadioButton fx:id="driverRadio" layoutX="312.0" layoutY="22.0" mnemonicParsing="false" onAction="#disableFields" text="Driver" toggleGroup="$userType" />
-      <TextField layoutX="41.0" layoutY="258.0" promptText="License" />
-      <TextField layoutX="41.0" layoutY="290.0" promptText="Birthday Date" />
-      <TextField layoutX="41.0" layoutY="327.0" promptText="Vehicle Type" />
-      <TextField fx:id="addressField" layoutX="223.0" layoutY="59.0" promptText="Address" />
+      <AnchorPane fx:id="commonPane" layoutX="24.0" layoutY="51.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TextField fx:id="usernameField" layoutX="27.0" layoutY="23.0" promptText="Username" />
+            <PasswordField fx:id="pswField" layoutX="27.0" layoutY="58.0" promptText="Password" />
+            <TextField fx:id="nameField" layoutX="29.0" layoutY="94.0" promptText="Name" />
+            <TextField fx:id="surnameField" layoutX="29.0" layoutY="127.0" promptText="Surname" />
+            <TextField fx:id="phoneNumField" layoutX="29.0" layoutY="161.0" promptText="Phone number" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="basicPane" layoutX="212.0" layoutY="51.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TextField fx:id="addressField" layoutX="26.0" layoutY="24.0" promptText="Address" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="driverPane" layoutX="412.0" layoutY="51.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TextField layoutX="26.0" layoutY="24.0" promptText="License" />
+            <ComboBox layoutX="26.0" layoutY="124.0" prefWidth="150.0" promptText="Vehicle Type" />
+            <DatePicker layoutX="14.0" layoutY="75.0" promptText="Birthday Date" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="restaurantPane" layoutX="434.0" layoutY="39.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ComboBox layoutX="25.0" layoutY="30.0" prefWidth="150.0" promptText="Dishes" />
+            <TextField layoutX="26.0" layoutY="68.0" promptText="Work hours" />
+            <TextField layoutX="26.0" layoutY="106.0" promptText="Rating" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
