--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -10,12 +10,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="441.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.MainForm">
    <children>
-      <TabPane prefHeight="441.0" prefWidth="699.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabsPane" layoutX="-170.0" prefHeight="441.0" prefWidth="699.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
-          <Tab text="User management">
+          <Tab fx:id="userTab" onSelectionChanged="#reloadTableData" text="User management">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="699.0">
                      <children>
@@ -35,6 +34,16 @@
                   </AnchorPane>
             </content>
           </Tab>
+            <Tab fx:id="managementTab" onSelectionChanged="#reloadTableData" text="Orders management">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab fx:id="foodTab" onSelectionChanged="#reloadTableData" text="Food management">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
           <Tab text="Restaurant orders">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0">
@@ -53,6 +62,15 @@
                         <ListView layoutX="8.0" layoutY="29.0" prefHeight="376.0" prefWidth="222.0" />
                         <Label layoutX="8.0" layoutY="6.0" text="My menu:" />
                         <ComboBox layoutX="257.0" layoutY="29.0" prefWidth="150.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="altTab" onSelectionChanged="#reloadTableData" text="Alternative user management">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ListView fx:id="userListField" layoutX="14.0" layoutY="14.0" prefHeight="388.0" prefWidth="187.0" />
                      </children>
                   </AnchorPane>
               </content>
