--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -70,7 +70,10 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="userListField" layoutX="14.0" layoutY="14.0" prefHeight="388.0" prefWidth="187.0" />
+                        <ListView fx:id="userListField" layoutX="14.0" layoutY="14.0" prefHeight="183.0" prefWidth="668.0" />
+                        <Button layoutX="95.0" layoutY="235.0" mnemonicParsing="false" onAction="#addUser" text="Add new user" />
+                        <Button layoutX="309.0" layoutY="235.0" mnemonicParsing="false" onAction="#loadUser" text="Update user" />
+                        <Button layoutX="510.0" layoutY="235.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete user" />
                      </children>
                   </AnchorPane>
               </content>
