--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="441.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.MainForm">
@@ -34,36 +35,39 @@
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab fx:id="managementTab" onSelectionChanged="#reloadTableData" text="Orders management">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
-            </Tab>
-            <Tab fx:id="foodTab" onSelectionChanged="#reloadTableData" text="Food management">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
-            </Tab>
-          <Tab text="Restaurant orders">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0">
-                     <children>
-                        <ListView layoutX="5.0" layoutY="14.0" prefHeight="393.0" prefWidth="228.0" />
-                        <ComboBox layoutX="252.0" layoutY="14.0" prefWidth="150.0" />
-                        <ComboBox layoutX="252.0" layoutY="59.0" prefWidth="150.0" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-            <Tab text="Menu">
+            <Tab fx:id="orderTab" onSelectionChanged="#reloadTableData" text="Order management">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="8.0" layoutY="29.0" prefHeight="376.0" prefWidth="222.0" />
-                        <Label layoutX="8.0" layoutY="6.0" text="My menu:" />
-                        <ComboBox layoutX="257.0" layoutY="29.0" prefWidth="150.0" />
-                     </children>
-                  </AnchorPane>
+                        <ListView layoutX="21.0" layoutY="24.0" prefHeight="357.0" prefWidth="277.0" />
+                        <TextField layoutX="328.0" layoutY="24.0" />
+                        <TextArea layoutX="328.0" layoutY="68.0" prefHeight="200.0" prefWidth="200.0" />
+                        <ComboBox layoutX="328.0" layoutY="292.0" prefWidth="150.0" />
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="cuisineTab" onSelectionChanged="#reloadTableData" text="Cuisine management">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="14.0" prefHeight="352.0" prefWidth="305.0" />
+                        <TextField fx:id="cuisineTitleField" layoutX="350.0" layoutY="22.0" promptText="Title" />
+                        <TextArea fx:id="cuisineDescriptionField" layoutX="350.0" layoutY="66.0" prefHeight="200.0" prefWidth="200.0" promptText="Description" />
+                        <ComboBox fx:id="cuisineAllergensField" layoutX="350.0" layoutY="290.0" prefWidth="150.0" promptText="Allergens" />
+                        <Button layoutX="350.0" layoutY="354.0" mnemonicParsing="false" onAction="#addCuisine" text="Add" />
+                        <Button layoutX="478.0" layoutY="353.0" mnemonicParsing="false" onAction="#updateCuisine" text="Update" />
+                        <Button layoutX="604.0" layoutY="354.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+            <Tab fx:id="chatTab" onSelectionChanged="#reloadTableData" text="Chat">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab fx:id="reviewTab" onSelectionChanged="#reloadTableData" text="Review">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </Tab>
             <Tab fx:id="altTab" onSelectionChanged="#reloadTableData" text="Alternative user management">
