--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -2,7 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,7 +17,7 @@
 
 <AnchorPane prefHeight="441.0" prefWidth="699.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.courseprifs.fxControllers.MainForm">
    <children>
-      <TabPane fx:id="tabsPane" layoutX="-170.0" prefHeight="441.0" prefWidth="699.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane fx:id="tabsPane" layoutX="-170.0" prefHeight="441.0" prefWidth="755.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
           <Tab fx:id="userTab" onSelectionChanged="#reloadTableData" text="User management">
             <content>
@@ -37,15 +41,32 @@
           </Tab>
             <Tab fx:id="orderTab" onSelectionChanged="#reloadTableData" text="Order management">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="445.0" prefWidth="759.0">
                      <children>
-                        <ListView fx:id="orderListField" layoutX="21.0" layoutY="15.0" prefHeight="374.0" prefWidth="418.0" />
-                        <TextField fx:id="orderNameField" layoutX="490.0" layoutY="24.0" promptText="Order name" />
-                        <ComboBox fx:id="orderCuisineField" layoutX="490.0" layoutY="123.0" prefWidth="150.0" promptText="Cuisine" />
-                        <TextField fx:id="orderPriceField" layoutX="490.0" layoutY="72.0" promptText="Price" />
-                        <Button layoutX="469.0" layoutY="355.0" mnemonicParsing="false" onAction="#addOrder" text="Add" />
-                        <Button layoutX="537.0" layoutY="355.0" mnemonicParsing="false" onAction="#updateOrder" text="Update" />
-                        <Button layoutX="615.0" layoutY="355.0" mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
+                        <ListView fx:id="orderListField" layoutX="21.0" layoutY="72.0" onMouseClicked="#loadOrderInfo" prefHeight="317.0" prefWidth="262.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu></ListView>
+                        <TextField fx:id="orderNameField" layoutX="301.0" layoutY="81.0" promptText="Order name" />
+                        <ComboBox fx:id="orderCuisineField" layoutX="301.0" layoutY="307.0" prefWidth="150.0" promptText="Cuisine" />
+                        <TextField fx:id="orderPriceField" layoutX="301.0" layoutY="116.0" promptText="Price" />
+                        <Button layoutX="301.0" layoutY="364.0" mnemonicParsing="false" onAction="#createOrder" text="Add" />
+                        <Button layoutX="369.0" layoutY="364.0" mnemonicParsing="false" onAction="#updateOrder" text="Update" />
+                        <Button layoutX="447.0" layoutY="364.0" mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
+                        <ComboBox fx:id="orderClientList" layoutX="301.0" layoutY="150.0" prefWidth="150.0" promptText="Client" />
+                        <ComboBox fx:id="orderRestaurantList" layoutX="301.0" layoutY="182.0" prefWidth="150.0" promptText="Restaurant" />
+                        <ComboBox fx:id="orderStatusField" layoutX="301.0" layoutY="218.0" prefWidth="150.0" promptText="Order Status" />
+                        <ComboBox fx:id="filterRestaurants" layoutX="21.0" layoutY="24.0" prefWidth="150.0" />
+                        <ComboBox fx:id="filterClients" layoutX="190.0" layoutY="24.0" prefWidth="150.0" />
+                        <DatePicker layoutX="352.0" layoutY="24.0" prefHeight="25.0" prefWidth="154.0" />
+                        <DatePicker layoutX="528.0" layoutY="24.0" prefHeight="25.0" prefWidth="145.0" />
+                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0" />
+                        <ListView fx:id="cuisineList" layoutX="580.0" layoutY="71.0" prefHeight="269.0" prefWidth="99.0" />
+                        <Button layoutX="575.0" layoutY="364.0" mnemonicParsing="false" text="View Chat" />
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -53,26 +74,25 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="14.0" prefHeight="374.0" prefWidth="445.0" />
-                        <TextField fx:id="cuisineTitleField" layoutX="475.0" layoutY="20.0" prefHeight="25.0" prefWidth="200.0" promptText="Title" />
-                        <TextArea fx:id="cuisineDescriptionField" layoutX="475.0" layoutY="54.0" prefHeight="200.0" prefWidth="200.0" promptText="Description" />
-                        <ComboBox fx:id="cuisineAllergensField" layoutX="475.0" layoutY="263.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
-                        <Button layoutX="476.0" layoutY="354.0" mnemonicParsing="false" onAction="#addCuisine" text="Add" />
-                        <Button layoutX="547.0" layoutY="354.0" mnemonicParsing="false" onAction="#updateCuisine" text="Update" />
-                        <Button layoutX="623.0" layoutY="354.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
-                        <TextField fx:id="cuisinePriceField" layoutX="476.0" layoutY="302.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
+                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="40.0" prefHeight="348.0" prefWidth="227.0" />
+                        <TextField fx:id="cuisineTitleField" layoutX="265.0" layoutY="27.0" prefHeight="25.0" prefWidth="200.0" promptText="Title" />
+                        <TextArea fx:id="cuisineDescriptionField" layoutX="265.0" layoutY="61.0" prefHeight="200.0" prefWidth="200.0" promptText="Description" />
+                        <ComboBox fx:id="cuisineAllergensField" layoutX="265.0" layoutY="270.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
+                        <Button layoutX="266.0" layoutY="361.0" mnemonicParsing="false" onAction="#addCuisine" text="Add" />
+                        <Button layoutX="337.0" layoutY="361.0" mnemonicParsing="false" onAction="#updateCuisine" text="Update" />
+                        <Button layoutX="413.0" layoutY="361.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
+                        <TextField fx:id="cuisinePriceField" layoutX="266.0" layoutY="309.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
+                        <Label layoutX="14.0" layoutY="24.0" text="Meniu:" />
                      </children></AnchorPane>
               </content>
             </Tab>
-            <Tab fx:id="chatTab" onSelectionChanged="#reloadTableData" text="Chat">
+            <Tab fx:id="chatTab" onSelectionChanged="#reloadTableData" text="Chat management">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="23.0" layoutY="23.0" prefHeight="365.0" prefWidth="358.0" />
-                        <Button layoutX="435.0" layoutY="363.0" mnemonicParsing="false" text="Add" />
+                        <ListView layoutX="23.0" layoutY="23.0" prefHeight="365.0" prefWidth="184.0" />
                         <Button layoutX="524.0" layoutY="363.0" mnemonicParsing="false" text="Update" />
-                        <Button layoutX="616.0" layoutY="363.0" mnemonicParsing="false" text="Delete" />
-                        <ComboBox layoutX="435.0" layoutY="23.0" prefWidth="150.0" promptText="Message" />
+                        <ListView layoutX="235.0" layoutY="23.0" prefHeight="366.0" prefWidth="166.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
