--- a/src/main/resources/com/example/courseprifs/main-form.fxml
+++ b/src/main/resources/com/example/courseprifs/main-form.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
@@ -52,20 +54,23 @@
                               </ContextMenu>
                            </contextMenu></ListView>
                         <TextField fx:id="orderNameField" layoutX="301.0" layoutY="81.0" promptText="Order name" />
-                        <ComboBox fx:id="orderCuisineField" layoutX="301.0" layoutY="307.0" prefWidth="150.0" promptText="Cuisine" />
+                        <ComboBox fx:id="orderCuisineField" layoutX="301.0" layoutY="273.0" prefWidth="150.0" promptText="Cuisine" />
                         <TextField fx:id="orderPriceField" layoutX="301.0" layoutY="116.0" promptText="Price" />
                         <Button layoutX="301.0" layoutY="364.0" mnemonicParsing="false" onAction="#createOrder" text="Add" />
                         <Button layoutX="369.0" layoutY="364.0" mnemonicParsing="false" onAction="#updateOrder" text="Update" />
                         <Button layoutX="447.0" layoutY="364.0" mnemonicParsing="false" onAction="#deleteOrder" text="Delete" />
                         <ComboBox fx:id="orderClientList" layoutX="301.0" layoutY="150.0" prefWidth="150.0" promptText="Client" />
-                        <ComboBox fx:id="orderRestaurantList" layoutX="301.0" layoutY="182.0" prefWidth="150.0" promptText="Restaurant" />
+                        <ComboBox fx:id="orderRestaurantList" layoutX="301.0" layoutY="182.0" onAction="#loadRestaurantMenuForOrder" prefWidth="150.0" promptText="Restaurant" />
                         <ComboBox fx:id="orderStatusField" layoutX="301.0" layoutY="218.0" prefWidth="150.0" promptText="Order Status" />
-                        <ComboBox fx:id="filterRestaurants" layoutX="21.0" layoutY="24.0" prefWidth="150.0" />
-                        <ComboBox fx:id="filterClients" layoutX="190.0" layoutY="24.0" prefWidth="150.0" />
-                        <DatePicker layoutX="352.0" layoutY="24.0" prefHeight="25.0" prefWidth="154.0" />
-                        <DatePicker layoutX="528.0" layoutY="24.0" prefHeight="25.0" prefWidth="145.0" />
-                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0" />
-                        <ListView fx:id="cuisineList" layoutX="580.0" layoutY="71.0" prefHeight="269.0" prefWidth="99.0" />
+                        <ComboBox fx:id="filterStatus" layoutX="21.0" layoutY="24.0" onAction="#filterOrders" prefWidth="150.0" />
+                        <ComboBox fx:id="filterClients" layoutX="190.0" layoutY="24.0" onAction="#filterOrders" prefWidth="150.0" />
+                        <DatePicker fx:id="filterFrom" layoutX="359.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="154.0" />
+                        <DatePicker fx:id="filterTo" layoutX="528.0" layoutY="24.0" onAction="#filterOrders" prefHeight="25.0" prefWidth="145.0" />
+                        <ListView fx:id="basicUserList" layoutX="473.0" layoutY="72.0" prefHeight="269.0" prefWidth="98.0">
+                           <padding>
+                              <Insets right="10.0" />
+                           </padding></ListView>
+                        <ListView fx:id="cuisineList" layoutX="581.0" layoutY="72.0" prefHeight="269.0" prefWidth="103.0" AnchorPane.leftAnchor="581.0" AnchorPane.rightAnchor="20.0" />
                         <Button layoutX="575.0" layoutY="364.0" mnemonicParsing="false" text="View Chat" />
                      </children></AnchorPane>
               </content>
@@ -74,15 +79,25 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="40.0" prefHeight="348.0" prefWidth="227.0" />
-                        <TextField fx:id="cuisineTitleField" layoutX="265.0" layoutY="27.0" prefHeight="25.0" prefWidth="200.0" promptText="Title" />
-                        <TextArea fx:id="cuisineDescriptionField" layoutX="265.0" layoutY="61.0" prefHeight="200.0" prefWidth="200.0" promptText="Description" />
-                        <ComboBox fx:id="cuisineAllergensField" layoutX="265.0" layoutY="270.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
-                        <Button layoutX="266.0" layoutY="361.0" mnemonicParsing="false" onAction="#addCuisine" text="Add" />
-                        <Button layoutX="337.0" layoutY="361.0" mnemonicParsing="false" onAction="#updateCuisine" text="Update" />
-                        <Button layoutX="413.0" layoutY="361.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
-                        <TextField fx:id="cuisinePriceField" layoutX="266.0" layoutY="309.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
+                        <ListView fx:id="cuisineListField" layoutX="14.0" layoutY="40.0" prefHeight="348.0" prefWidth="227.0">
+                           <contextMenu>
+                              <ContextMenu>
+                                <items>
+                                  <MenuItem mnemonicParsing="false" text="Delete" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu></ListView>
+                        <TextField fx:id="cuisineTitleField" layoutX="267.0" layoutY="28.0" prefHeight="25.0" prefWidth="199.0" promptText="Title" />
+                        <TextArea fx:id="cuisineDescriptionField" layoutX="267.0" layoutY="91.0" prefHeight="110.0" prefWidth="200.0" promptText="Description" />
+                        <ComboBox fx:id="cuisineAllergensField" layoutX="268.0" layoutY="206.0" prefHeight="25.0" prefWidth="199.0" promptText="Allergens" />
+                        <Button layoutX="267.0" layoutY="363.0" mnemonicParsing="false" onAction="#createNewMenuItem" text="Add" />
+                        <Button layoutX="333.0" layoutY="363.0" mnemonicParsing="false" onAction="#updateMenuItem" text="Update" />
+                        <Button layoutX="415.0" layoutY="363.0" mnemonicParsing="false" onAction="#deleteCuisine" text="Delete" />
+                        <TextField fx:id="cuisinePriceField" layoutX="268.0" layoutY="59.0" prefHeight="25.0" prefWidth="198.0" promptText="Price" />
                         <Label layoutX="14.0" layoutY="24.0" text="Meniu:" />
+                        <ListView fx:id="cuisineRestaurantList" layoutX="268.0" layoutY="238.0" onMouseClicked="#loadRestaurantMenu" prefHeight="105.0" prefWidth="200.0" />
+                        <CheckBox fx:id="isSpicy" layoutX="505.0" layoutY="24.0" mnemonicParsing="false" text="Spicy" />
+                        <CheckBox fx:id="isVegan" layoutX="505.0" layoutY="59.0" mnemonicParsing="false" text="Vegan" />
                      </children></AnchorPane>
               </content>
             </Tab>
